<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uniMAP</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Search For</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search_for">Search For</string>
    <string name="search_for">Search</string>
    <string name="about">About</string>
    <string name="building">Building</string>
    <string name="shops">Shops</string>
    <string name="toilet">Toilet</string>
    <string name="rooms">Rooms to book</string>
    <string name="title_activity_about">About</string>
    <string name="vs">Vesrsion 1.0</string>
    <string name="rights">Copyright © 2013</string>
    <string name="company">University Of Southampton</string>
    <string name="author">Eirini Televantou</string>
    <string name="info">This material has been developed by a student of University of Southampton for an MSc project by using the University Open Data service..</string>
    <string name="title_activity_building">Building</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="title_activity_food">Shops</string>
    <string name="title_activity_toilet">Toilet</string>
    <string name="Building_No">Building No:</string>
    <string name="Building_Name">Building Name:</string>
    <string name="Search_By">Search By:</string>
    <string name="title_activity_directions">Directions</string>
    <string name="capacity">Capacity:</string>
    <string name="title_activity_room_directions">Room Directions</string>
    <string name="people">No of people</string>

    <string-array name="feature_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_sparql_directions">SparqlDirectionsActivity</string>
    <string name="title_activity_gmap_v2_direction">GMapV2Direction</string>
    <string name="title_activity_specific_room">Room</string>
    <string name="title_activity_sparql_specific_room">SparqlSpecificRoomActivity</string>
    <string name="title_activity_specific_food">Room</string>
    <string name="title_activity_sparql_specific_food">SparqlSpecificFood</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_sheet">Sheet</string>
    <string name="title_activity_consent_form">ConsentForm</string>
    <string name="title_activity_gpstracker">GPSTracker</string>
    <string name="title_activity_my_location_listener">MyLocationListener</string>
    <string name="title_activity_smain">SMainActivity</string>

</resources>